--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     <div class="card active" id="c1">
       <div class="emoji">👋🏻</div>
-      <p class="big">Hi May Ann</p>
+      <p class="big">Hi May Ann.
+I hope this finds you at a gentle moment in your day.</p>
       <button class="btn" onclick="goNext(2)">Next</button>
     </div>
 
@@ -77,3 +78,4 @@ hoping you stay strong through whatever you’re facing,that your efforts are re
   <script src="script.js"></script>
 </body>
 </html>
+
