--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="card active" id="c1">
       <div class="emoji">👋🏻</div>
       <p class="big">Hi May Ann.
-I hope my message finds you at a gentle moment in your day.</p>
+I hope this finds you at a gentle moment in your day.</p>
       <button class="btn" onclick="goNext(2)">Next</button>
     </div>
 
@@ -78,5 +78,6 @@ hoping you stay strong through whatever you’re facing,that your efforts are re
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
