--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- ✨ LOADER -->
   <div class="loader" id="loader">
     <div class="sparkle">✨</div>
-    <p class="loading-text">Just a moment…</p>
+    <p class="loading-text">A gentle message for you...</p>
   </div>
 
   <!-- TEXT SEQUENCE -->
@@ -46,8 +46,9 @@ a small reminder that there are people who support your success.</p>
     <div class="card" id="c3">
       <div class="emoji">🙏</div>
       <p class="big">
-        Just a gentle reminder that there are people quietly rooting for your success and your well-being
-hoping you stay strong through whatever you’re facing,that your efforts are rewarded,and that you’re guided and protected along the way.
+       I want you to know that you’re not alone in what you’re working through.
+I hope you stay strong through whatever you’re facing, that your efforts feel meaningful,
+and that you’re guided and protected along the way.
       </p>
       <button class="btn" onclick="showVideo()">Continue</button>
     </div>
@@ -78,6 +79,7 @@ hoping you stay strong through whatever you’re facing,that your efforts are re
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
