--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
   </button>
 
   <!-- ✨ LOADER -->
-  <div class="loader" id="loader">
-    <div class="sparkle">✨</div>
-    <p class="loading-text">A gentle message for you...</p>
-  </div>
+ <div class="loader" id="loader">
+  <div class="sparkle">✨</div>
+  <p class="loading-text">
+    A gentle message for you…  
+    <span>You might want to use earphones 🎧</span>
+  </p>
+</div>
 
   <!-- TEXT SEQUENCE -->
   <main class="sequence hidden" id="text-sequence">
@@ -79,6 +82,7 @@ and that you’re guided and protected along the way.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
