--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <div class="loader" id="loader">
   <div class="sparkle">✨</div>
   <p class="loading-text">
-    A gentle message for you…  
+    A gentle message for you… <br> 
     <span>You might want to use earphones 🎧</span>
   </p>
 </div>
@@ -82,6 +82,7 @@ and that you’re guided and protected along the way.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
