--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       <div class="emoji">👋🏻</div>
       <p class="big">Hi May Ann.
 I hope this finds you at a gentle moment in your day.</p>
-      <button class="btn" onclick="goNext(2)">Next</button>
+      <button class="btn" onclick="goNext(2)">Continue</button>
     </div>
 
     <div class="card" id="c2">
       <div class="emoji">🌷</div>
       <p class="big">I made this just to send something gentle your way,
 a small reminder that there are people who support your success.</p>
-      <button class="btn" onclick="goNext(3)">Next</button>
+      <button class="btn" onclick="goNext(3)">Continue</button>
     </div>
 
     <div class="card" id="c3">
@@ -82,6 +82,7 @@ and that you’re guided and protected along the way.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
