--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ and that you’re guided and protected along the way.
     <div class="yt-container">
 
       <div class="yt-video">
-        <video id="messageVideo" playsinline>
+        <video id="messageVideo" playsinline loop>
           <source src="video.mp4" type="video/mp4">
         </video>
       </div>
@@ -81,6 +81,7 @@ and that you’re guided and protected along the way.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
