--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ and that you’re guided and protected along the way.
   <!-- VIDEO -->
   <section class="video-section" id="video-section">
     <div class="yt-container">
-
+          <div class="emoji">🌟</div>
+<h1 class="yt-title">I hope every day brings you something good.</h1>
       <div class="yt-video">
         <video id="messageVideo" playsinline loop>
           <source src="video.mp4" type="video/mp4">
@@ -69,7 +70,6 @@ and that you’re guided and protected along the way.
       </div>
 
       <div class="yt-info">
-        <h1 class="yt-title">I hope every day brings you something good.</h1>
         <p class="yt-meta">
           May you be blessed, and may the Lord protect you always.
         </p>
@@ -81,6 +81,7 @@ and that you’re guided and protected along the way.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
