--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="card active" id="c1">
       <div class="emoji">👋🏻</div>
-      <p class="big">Hi May Ann<small><i>@meeeeeh01</small></i><br>
+      <p class="big">Hi May Ann<br><small><i>@meeeeeh01</small></i><br>
 I hope this finds you at a gentle moment in your day.</p>
       <button class="btn" onclick="goNext(2)">Continue</button>
     </div>
@@ -80,6 +80,7 @@ and that you’re guided and protected along the way.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
