--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ and that you’re guided and protected along the way.
   <section class="video-section" id="video-section">
     <div class="yt-container">
   <div class="yt-info">
+     <div class="emoji">🌟</div>
         <h1 class="yt-title">I hope every day brings you something good.</h1>
         <p class="yt-meta">
           May you be blessed, and may the Lord protect you always.
@@ -81,6 +82,7 @@ and that you’re guided and protected along the way.
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
